Replace hotspot jtreg test suite with tests from jdk7u